shared/logs/futurebot_tracker.log
nohup: ignoring input
python3: can't open file '/opt/infinity_x_one/faucet_system/tracker.py': [Errno 2] No such file or directory
python3: can't open file '/opt/infinity_x_one/faucet_system/tracker.py': [Errno 2] No such file or directory
  File "/opt/infinity_x_one/faucet_system/tracker.py", line 4
    if [ ! -f $BASE/faucet_system/tracker.py ]; then
         ^
SyntaxError: invalid syntax
  File "/opt/infinity_x_one/faucet_system/tracker.py", line 4
    if [ ! -f $BASE/faucet_system/tracker.py ]; then
         ^
SyntaxError: invalid syntax
  File "/opt/infinity_x_one/faucet_system/tracker.py", line 4
    if [ ! -f $BASE/faucet_system/tracker.py ]; then
         ^
SyntaxError: invalid syntax
  File "/opt/infinity_x_one/faucet_system/tracker.py", line 4
    if [ ! -f $BASE/faucet_system/tracker.py ]; then
         ^
SyntaxError: invalid syntax
